fix(tavla): smaller spacing

--- a/next-tavla/app/globals.css
+++ b/next-tavla/app/globals.css
@@ -212,7 +212,7 @@
 
     @supports not (gap: 0.75em) {
         .rootContainer > * {
-            margin: 0.75em;
+            margin: 0.5em;
         }
     }
 
